@@ -138,6 +138,8 @@ class ScriptBinding:
         filename = self.getfilename()
         if not filename:
             return
+        if not self.tabnanny(filename):
+            return
         code = self.checksyntax(filename)
         if not code:
             return
